--- a/EmployeeDetails/src/main/resources/application.properties
+++ b/EmployeeDetails/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8081
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=employeedatabase
 spring.data.mongodb.port=27017
+
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.topic.name=employeeTopic
